<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2017 Hendrik Depauw
  ~ Copyright (c) 2017 Lorenz van Herwaarden
  ~ Copyright (c) 2017 Nick Aelterman
  ~ Copyright (c) 2017 Olivier Cammaert
  ~ Copyright (c) 2017 Maxim Deweirdt
  ~ Copyright (c) 2017 Gerwin Dox
  ~ Copyright (c) 2017 Simon Neuville
  ~ Copyright (c) 2017 Stiaan Uyttersprot
  ~
  ~ This software may be modified and distributed under the terms of the MIT license.  See the LICENSE file for details.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/content_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    tools:context="com.dp16.runamicghent.Activities.RunningScreen.WhileRunningFragment">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/running_rl"
        android:layout_width="match_parent"
        android:background="#00000000"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/dynamic_buttons"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="4dp"
                android:layout_gravity="end"
                android:clipToPadding="false">

                   <android.support.design.widget.FloatingActionButton
                    android:id="@+id/plusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_route_plus"
                    android:tint="@color/colorAccent"
                    app:backgroundTint="@color/colorIcons"
                    app:borderWidth="0dp"
                    app:elevation="2dp"
                    app:fabSize="mini"
                    app:rippleColor="@color/colorIcons" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/minusButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/ic_route_minus"
                    android:tint="@color/colorAccent"
                    app:backgroundTint="@color/colorIcons"
                    app:borderWidth="0dp"
                    app:elevation="2dp"
                    app:fabSize="mini"
                    app:rippleColor="@color/colorIcons" />
                </LinearLayout>

            <LinearLayout
                android:id="@+id/running_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#00000000"
                android:orientation="vertical"
                xmlns:card_view="http://schemas.android.com/apk/res-auto">

                <android.support.v7.widget.CardView
                    android:id="@+id/running_cardview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="2dp"
                    card_view:cardCornerRadius="6dp"
                    card_view:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="false"
                        android:background="@color/colorPrimary"
                        android:elevation="4dp"
                        android:orientation="vertical"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:clipToPadding="false"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/speed_label"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/heart_rate_label"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="6dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/speed"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAlignment="center"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/heartrate"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:text="@string/heart_rate_null"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <ImageView
                                    android:id="@+id/heart"
                                    android:tint="@color/colorRed"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentRight="true"
                                    android:layout_marginRight="8dp"
                                    android:src="@drawable/ic_heart_rate" />
                            </RelativeLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:clipToPadding="false"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/duration_label"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/distance_label"
                                android:textAlignment="center"
                                android:textAllCaps="false"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/duration"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/duration_null"
                                android:textAlignment="center"
                                android:textColor="@color/colorPrimaryText"
                                android:textSize="24sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:layout_weight="1"
                                >

                                <TextView
                                    android:id="@+id/distance"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="3"
                                    android:text="@string/distance_null"
                                    android:textAlignment="textEnd"
                                    android:textColor="@color/colorPrimaryText"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:id="@+id/routeTotal"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:fontFamily="sans-serif-condensed"
                                    android:text="@string/total_route_length_label"
                                    android:textAlignment="center"
                                    android:textColor="@color/colorSecondaryText"
                                    android:textSize="14sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:clipToPadding="false">

                    <Button
                        android:id="@+id/stop_button"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:elevation="1dp"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_rounded"
                        android:backgroundTint="@color/colorRed"
                        android:textColor="@drawable/button_text_color"
                        android:text="@string/stop_run" />

                    <ToggleButton
                        android:id="@+id/pause_toggle"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:elevation="1dp"
                        android:background="@drawable/button_rounded"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/colorAccent"
                        android:textColor="@drawable/button_text_color"
                        android:textOff="@string/pause_run"
                        android:textOn="@string/resume_run" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>