...
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:paddingTop="8dp"
            android:clipToPadding="false">

            <Button
                android:id="@+id/generate_route"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="10dp"
...
