...
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:clipToPadding="false">

                <Button
                    android:id="@+id/discard"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:elevation="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
...
